Fix vertical overflow in register body

--- a/heucc_pos/pos_server/static/pos_server/project-styles.css
+++ b/heucc_pos/pos_server/static/pos_server/project-styles.css
@@ -60,6 +60,10 @@ form#login {
     gap: 1rem;
 }
 
+body:has(main#pos) {
+    overflow-y: hidden;
+}
+
 main#pos {
     grid-template-columns: 2fr 1fr;
     gap: 1rem;
